fix(blur): remove small right-edge gap of blur on mobile devices

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -3773,6 +3773,7 @@ pre {
   object-fit: cover;
 }
 .single_hero_background {
+  width: calc(100% + 1px);
   z-index: -10;
 }
 .hero_gradient {
